Bug 599119 - Do not scan plugin directories unnecessarily while loading messages. r=Standard8, sr=bienvenu

Currently, whenever we load a message, we ask the docshell to load a URI with
content type message/rfc822. The docshell first looks for a Gecko content viewer
to deal with the content type. Since none currently exist, it reloads plugins --
twice! -- to find out whether a plugin can handle it. Only afterwards does it
look for a stream converter (in our case libmime) to convert the content type
into something it recognizes.

This patch adds a document loader factory which simply plugs a stream converter
into the chain. It also registers the factory to handle the message/rfc822
content type, so that the docshell's lookup succeeds immediately.